# emu-gameboy

./: .gitignore  CMakeLists-AppleGL.txt  CMakeLists-GLFW.txt  CMakeLists-PortAudio.txt  CMakeLists-rtAudio.txt  CMakeLists.txt  LICENSE.md  README.md
docs/: PanDocs.html
libs/glad/src/: glad.c
libs/imgui/: imgui.cpp
src/: dac.cpp  dac.h  dac.hpp  debugger.cpp  debugger.h  debugger.hpp  disassembler.cpp  disassembler.h  ggb_constants.h  ggb_constants.hpp  ggb_enums.hpp  main.cpp  rom.cpp  rom.h
src/hardware/: cartridge.cpp  cartridge.h  cartridge.hpp  clock.cpp  clock.h  clock.hpp  cpu.cpp  cpu.h  cpu.hpp  gameboy.cpp  gameboy.h  gameboy.hpp  input.cpp  input.h  input.hpp  memory.cpp  memory.h  memory_flags.h  ppu.cpp  ppu.h  register.h  timer.cpp  timer.h  timer.hpp
src/hardware/audio/: apu.cpp  apu.h  apu.hpp  apu_consts.h  apu_enums.h  dac.cpp  dac.hpp  noise_channel.cpp  noise_channel.h  noise_channel.hpp  ring_buffer.hpp  square_channel.cpp  square_channel.h  square_channel.hpp  wave_channel.cpp  wave_channel.h  wave_channel.hpp
src/hardware/helper/: clock.cpp
src/hardware/memory/: io_register_flags.h  memory_flags.h  mmu.cpp  mmu.h  mmu.hpp  register.h
src/hardware/video/: background_maps.cpp  background_maps.h  background_maps.hpp  color_palettes.cpp  color_palettes.h  color_palettes.hpp  ppu.cpp  ppu.h  ppu.hpp  sprite_list.cpp  sprite_list.h  sprite_list.hpp  tile_data.cpp  tile_data.h  tile_list.cpp  tile_list.h  tile_list.hpp
src/helper/: string_helper.cpp  string_helper.h
src/instructions/: instruction_group.h  instruction_group_prefix.h  instruction_set.h  instruction_set.hpp
src/instructions/aritmetic/: adc.cpp  adc.h  add.cpp  add.h  and.cpp  and.h  ccf.cpp  ccf.h  cp.cpp  cp.h  cpl.cpp  cpl.h  daa.cpp  daa.h  dec.cpp  dec.h  inc.cpp  inc.h  or.cpp  or.h  sbc.cpp  sbc.h  scf.cpp  scf.h  sub.cpp  sub.h  xor.cpp  xor.h
src/instructions/branch/: call.cpp  call.h  jp.cpp  jp.h  jr.cpp  jr.h  ret.cpp  ret.h  reti.cpp  reti.h  rst.cpp  rst.h
src/instructions/groups/: aritmetic.cpp  aritmetic.h  aritmetic.hpp  (+11 more)
src/opengl/: font.cpp  font.h  resource_manager.cpp  resource_manager.h  resource_manager.hpp  screen.h  shader.h  structs.h  window.cpp  window.h  window.hpp
src/screens/: cartridge_screen.cpp  cartridge_screen.h  components_screen.cpp  components_screen.h  components_screen.hpp  cpu_screen.cpp  cpu_screen.h  debug_screen.cpp  debug_screen.h  debug_screen.hpp  disassembler_screen.cpp  disassembler_screen.h  gameboy_screen.cpp  gameboy_screen.h  gameboy_screen.hpp  instruction_screen.cpp  instruction_screen.h  memory_screen.cpp  memory_screen.h  misc_screen.cpp  misc_screen.h  rom_screen.cpp  rom_screen.h  string_helper.hpp
src/shaders/: rect.vshader  text.vshader
(+59 files in other folders)
